# OOP-Lab6

./: CMakeLists.txt  README.md  main.cpp
include/: arena.h  combat_visitor.h  console_observer.h  dragon.h  druid.h  elf.h  factory.h  file_observer.h  npc.h  observer.h
src/: arena.cpp  dragon.cpp  druid.cpp  elf.cpp  factory.cpp  npc.cpp
tests/: test_arena.cpp  test_combat.cpp  test_data_npcs.txt  test_factory.cpp  test_file_loading.cpp  test_npc.cpp
